--- a/SourceCode/web/tabs/display.html
+++ b/SourceCode/web/tabs/display.html
@@ -7,7 +7,6 @@
         <option value="90">90° Clockwise</option>
         <option value="-90">90° Counter-clockwise</option>
         <option value="180">180° (Upside down)</option>
-        <option value="270">270° Clockwise</option>
     </select>
 </div>
 
@@ -23,6 +22,20 @@
         <option value="between">Between images (alphabetical order)</option>
         <option value="after">After all images</option>
     </select>
+</div>
+
+<div class="form-group">
+    <label for="image-scaling">Image Scaling Mode</label>
+    <select id="image-scaling">
+        <option value="contain">Do not resize (fit within screen)</option>
+        <option value="fill">Stretch to whole screen</option>
+        <option value="cover">Zoom and crop to fill</option>
+    </select>
+    <small style="color: #6c757d; display: block; margin-top: 5px;">
+        • <strong>Do not resize:</strong> Images maintain aspect ratio and fit within screen (original behavior)<br>
+        • <strong>Stretch:</strong> Images fill entire screen, may distort aspect ratio<br>
+        • <strong>Zoom and crop:</strong> Images fill screen maintaining aspect ratio, edges may be cropped
+    </small>
 </div>
 
 <button id="save-display" class="btn-success">Save Display Settings</button>
