--- a/SourceCode/web/tabs/network.html
+++ b/SourceCode/web/tabs/network.html
@@ -2,18 +2,18 @@
 
 <div class="form-group">
     <label for="device-name">Device Name</label>
-    <input type="text" id="device-name" placeholder="Enter device name">
+    <input type="text" id="device-name" placeholder="Enter device name" autocomplete="off">
 </div>
 
 <div class="form-group">
     <label for="static-ip">Static IP (optional)</label>
-    <input type="text" id="static-ip" placeholder="192.168.1.100">
+    <input type="text" id="static-ip" placeholder="192.168.1.100" autocomplete="off">
     <small style="color: #6c757d;">Leave empty for localhost. App will bind to this IP address.</small>
 </div>
 
 <div class="form-group">
     <label>
-        <input type="checkbox" id="localhost-only"> Localhost only mode
+        <input type="checkbox" id="localhost-only" autocomplete="off"> Localhost only mode
     </label>
     <small style="color: #6c757d; display: block; margin-left: 24px;">
         When checked, the app will only be accessible from this machine (127.0.0.1).
@@ -23,25 +23,25 @@
 
 <div class="form-group">
     <label for="app-port">Application Port</label>
-    <input type="number" id="app-port" placeholder="3000" min="1" max="65535">
+    <input type="number" id="app-port" placeholder="3000" min="1" max="65535" autocomplete="off">
     <small style="color: #6c757d;">Default is 3000. Restart required after change.</small>
 </div>
 
 <div class="form-group">
     <label for="ws-port">WebSocket Port</label>
-    <input type="number" id="ws-port" placeholder="3001" min="1" max="65535">
+    <input type="number" id="ws-port" placeholder="3001" min="1" max="65535" autocomplete="off">
     <small style="color: #6c757d;">Default is 3001. Used for real-time updates.</small>
 </div>
 
 <div class="form-group">
     <label for="discovery-port">Discovery Port</label>
-    <input type="number" id="discovery-port" placeholder="3002" min="1" max="65535">
+    <input type="number" id="discovery-port" placeholder="3002" min="1" max="65535" autocomplete="off">
     <small style="color: #6c757d;">Default is 3002. Used for auto-discovery.</small>
 </div>
 
 <div class="form-group">
     <label for="password">Access Password</label>
-    <input type="password" id="password" placeholder="Enter password">
+    <input type="password" id="password" placeholder="Enter password" autocomplete="off">
     <small style="color: #6c757d;">Leave empty to disable password protection</small>
 </div>
 
@@ -53,14 +53,14 @@
 <h3 style="margin-top: 30px;">Add Device Manually</h3>
 <div class="form-group">
     <label for="manual-ip">Device IP Address</label>
-    <input type="text" id="manual-ip" placeholder="192.168.1.101">
+    <input type="text" id="manual-ip" placeholder="192.168.1.101" autocomplete="off">
 </div>
 <div class="form-group">
     <label for="manual-port">Device Port</label>
-    <input type="number" id="manual-port" placeholder="3000" value="3000" min="1" max="65535">
+    <input type="number" id="manual-port" placeholder="3000" value="3000" min="1" max="65535" autocomplete="off">
 </div>
 <div class="form-group">
     <label for="manual-name">Device Name</label>
-    <input type="text" id="manual-name" placeholder="Display 2">
+    <input type="text" id="manual-name" placeholder="Display 2" autocomplete="off">
 </div>
 <button id="add-device" class="btn-success">Add Device</button>
